--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.16.4",
     "@biomejs/biome": "^1.9.4",
+    "@microsoft/api-extractor": "^7.52.8",
     "@types/node": "20.9.0",
     "@vitest/browser": "^3.1.4",
     "@vitest/ui": "^3.1.4",
