--- a/packages/extension-block/package.json
+++ b/packages/extension-block/package.json
@@ -8,7 +8,9 @@
     "name": "Alberto Schiabel",
     "email": "alberto.schiabel@gmail.com"
   },
-  "files": ["build"],
+  "files": [
+    "build"
+  ],
   "main": "./build/index.js",
   "module": "./build/index.mjs",
   "types": "./build/index.d.ts",
@@ -41,6 +43,7 @@
   "dependencies": {
     "@infinitecanvas/core": "workspace:^",
     "@lastolivegames/becsy": "^0.15.5",
+    "lexorank": "^1.0.5",
     "uuid": "^11.1.0",
     "xstate": "^5.19.4"
   },
