--- a/packages/extension-renderer/tsconfig.build.json
+++ b/packages/extension-renderer/tsconfig.build.json
@@ -7,6 +7,8 @@
     // See: https://github.com/egoist/tsup/issues/571#issuecomment-1760052931
     "composite": false,
     // Only output d.ts files and not JavaScript files.
-    "emitDeclarationOnly": false
+    "emitDeclarationOnly": false,
+    // Specify the root folder within the project.
+    "rootDir": "src"
   }
 }
