--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,11 +30,39 @@
         "default": "./build/index.js"
       }
     },
+    "./helpers": {
+      "types": "./build/helpers/index.d.ts",
+      "import": {
+        "@infinitecanvas/source": "./src/helpers/index.ts",
+        "types": "./build/helpers/index.d.mts",
+        "default": "./build/helpers/index.mjs"
+      },
+      "require": {
+        "@infinitecanvas/source": "./src/helpers/index.ts",
+        "types": "./build/helpers/index.d.ts",
+        "default": "./build/helpers/index.js"
+      },
+      "default": "./build/helpers/index.js"
+    },
+    "./components": {
+      "types": "./build/components/index.d.ts",
+      "import": {
+        "@infinitecanvas/source": "./src/components/index.ts",
+        "types": "./build/components/index.d.mts",
+        "default": "./build/components/index.mjs"
+      },
+      "require": {
+        "@infinitecanvas/source": "./src/components/index.ts",
+        "types": "./build/components/index.d.ts",
+        "default": "./build/components/index.js"
+      },
+      "default": "./build/components/index.js"
+    },
     "./package.json": "./package.json"
   },
   "scripts": {
     "clean": "rimraf build .turbo",
-    "build": "tsup ./src/index.ts --tsconfig ./tsconfig.build.json --config ../../tsup.config.ts",
+    "build": "tsup ./src/index.ts ./src/helpers/index.ts ./src/components/index.ts --tsconfig ./tsconfig.build.json --config ../../tsup.config.ts",
     "build:watch": "pnpm build --watch",
     "check:exports": "attw --pack .",
     "test": "vitest  --config ../../vitest.config.ts run",
