--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -18,6 +18,7 @@
     "@infinitecanvas/extension-controls": "workspace:^",
     "@infinitecanvas/extension-input": "workspace:^",
     "@infinitecanvas/extension-renderer": "workspace:^",
+    "@preact/signals-core": "^1.10.0",
     "uuid": "^11.1.0"
   }
 }
