--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -70,11 +70,13 @@
   },
   "dependencies": {
     "@lastolivegames/becsy": "^0.15.5",
+    "@preact/signals-core": "^1.10.0",
     "immer": "^10.1.1",
     "lexorank": "^1.0.5",
     "signia": "^0.1.5",
     "strict-event-emitter": "^0.5.1",
     "xstate": "^5.19.4",
-    "zod": "^3.25.36"
+    "zod": "^3.25.36",
+    "zustand": "^5.0.5"
   }
 }
