--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -71,6 +71,7 @@
   "dependencies": {
     "@lastolivegames/becsy": "^0.15.5",
     "@preact/signals-core": "^1.10.0",
+    "idb": "^8.0.3",
     "immer": "^10.1.1",
     "lexorank": "^1.0.5",
     "signia": "^0.1.5",
