--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -17,6 +17,8 @@
     "@infinitecanvas/core": "workspace:^",
     "@infinitecanvas/extension-controls": "workspace:^",
     "@infinitecanvas/extension-input": "workspace:^",
+    "@infinitecanvas/extension-local-storage": "workspace:^",
+    "@infinitecanvas/extension-multiplayer": "workspace:^",
     "@infinitecanvas/extension-renderer": "workspace:^",
     "@preact/signals-core": "^1.10.0",
     "uuid": "^11.1.0"
