--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,32 +31,32 @@
       }
     },
     "./helpers": {
-      "types": "./build/helpers/index.d.ts",
       "import": {
         "@infinitecanvas/source": "./src/helpers/index.ts",
         "types": "./build/helpers/index.d.mts",
+        "import": "./build/helpers/index.mjs",
         "default": "./build/helpers/index.mjs"
       },
       "require": {
         "@infinitecanvas/source": "./src/helpers/index.ts",
         "types": "./build/helpers/index.d.ts",
+        "import": "./build/helpers/index.js",
         "default": "./build/helpers/index.js"
-      },
-      "default": "./build/helpers/index.js"
+      }
     },
     "./components": {
-      "types": "./build/components/index.d.ts",
       "import": {
         "@infinitecanvas/source": "./src/components/index.ts",
         "types": "./build/components/index.d.mts",
+        "import": "./build/components/index.mjs",
         "default": "./build/components/index.mjs"
       },
       "require": {
         "@infinitecanvas/source": "./src/components/index.ts",
         "types": "./build/components/index.d.ts",
+        "import": "./build/components/index.js",
         "default": "./build/components/index.js"
-      },
-      "default": "./build/components/index.js"
+      }
     },
     "./package.json": "./package.json"
   },
@@ -72,12 +72,10 @@
     "@lastolivegames/becsy": "^0.15.5",
     "@preact/signals-core": "^1.10.0",
     "idb": "^8.0.3",
-    "immer": "^10.1.1",
     "lexorank": "^1.0.5",
-    "signia": "^0.1.5",
     "strict-event-emitter": "^0.5.1",
+    "uuid": "^11.1.0",
     "xstate": "^5.19.4",
-    "zod": "^3.25.36",
-    "zustand": "^5.0.5"
+    "zod": "^3.25.36"
   }
 }
