--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -8,7 +8,6 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.7",
-    "@types/uuid": "^10.0.0",
     "tailwindcss": "^4.1.7",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
@@ -20,7 +19,6 @@
     "@infinitecanvas/extension-local-storage": "workspace:^",
     "@infinitecanvas/extension-multiplayer": "workspace:^",
     "@infinitecanvas/extension-renderer": "workspace:^",
-    "@preact/signals-core": "^1.10.0",
-    "uuid": "^11.1.0"
+    "@preact/signals-core": "^1.10.0"
   }
 }
