--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -19,6 +19,7 @@
     "@infinitecanvas/extension-local-storage": "workspace:^",
     "@infinitecanvas/extension-multiplayer": "workspace:^",
     "@infinitecanvas/extension-renderer": "workspace:^",
-    "@preact/signals-core": "^1.10.0"
+    "@preact/signals-core": "^1.10.0",
+    "lorem-ipsum": "^2.0.8"
   }
 }
