--- a/packages/extension-controls/package.json
+++ b/packages/extension-controls/package.json
@@ -43,7 +43,13 @@
   "dependencies": {
     "@infinitecanvas/core": "workspace:^",
     "@lastolivegames/becsy": "^0.15.5",
+    "@tiptap/core": "^3.0.1",
+    "@tiptap/extension-document": "^3.0.1",
+    "@tiptap/extension-history": "^3.0.1",
+    "@tiptap/extension-paragraph": "^3.0.1",
+    "@tiptap/extension-text": "^3.0.1",
     "lexorank": "^1.0.5",
+    "lit": "^3.3.0",
     "xstate": "^5.19.4",
     "zod": "^3.25.36"
   },
