--- a/packages/extension-floating-menus/package.json
+++ b/packages/extension-floating-menus/package.json
@@ -1,6 +1,6 @@
 {
   "private": false,
-  "name": "@infinitecanvas/extension-controls",
+  "name": "@infinitecanvas/extension-floating-menus",
   "version": "0.1.0",
   "description": "Demo library that contains common utility functions",
   "repository": "https://github.com/jkomyno/pnpm-monorepo-example.git",
@@ -41,20 +41,11 @@
     "test:watch": "vitest  --config ../../vitest.config.ts run --watch"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.7.2",
     "@infinitecanvas/core": "workspace:^",
     "@lastolivegames/becsy": "^0.15.5",
-    "@lit-labs/preact-signals": "^1.0.3",
-    "@tiptap/core": "^3.0.1",
-    "@tiptap/extension-document": "^3.0.1",
-    "@tiptap/extension-history": "^3.0.1",
-    "@tiptap/extension-paragraph": "^3.0.1",
-    "@tiptap/extension-text": "^3.0.1",
     "lexorank": "^1.0.5",
     "lit": "^3.3.0",
-    "xstate": "^5.19.4",
     "zod": "^3.25.36"
-  },
-  "devDependencies": {
-    "vitest": "^3.1.4"
   }
 }
