--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
       "path": "packages/extension-controls"
     },
     {
+      "path": "packages/extension-floating-menus"
+    },
+    {
       "path": "packages/extension-input"
     },
     {
