--- a/packages/extension-html-renderer/package.json
+++ b/packages/extension-html-renderer/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@infinitecanvas/core": "workspace:^",
     "@lastolivegames/becsy": "^0.15.5",
+    "@lit-labs/preact-signals": "^1.0.3",
     "lexorank": "^1.0.5",
     "lit": "^3.3.0"
   }
