--- a/packages/extension-sticky-notes/package.json
+++ b/packages/extension-sticky-notes/package.json
@@ -1,6 +1,6 @@
 {
   "private": false,
-  "name": "@infinitecanvas/extension-sticky-note",
+  "name": "@infinitecanvas/extension-sticky-notes",
   "version": "0.1.0",
   "description": "Demo library that contains common utility functions",
   "repository": "https://github.com/jkomyno/pnpm-monorepo-example.git",
@@ -44,26 +44,9 @@
     "@infinitecanvas/core": "workspace:^",
     "@infinitecanvas/extension-color": "workspace:^",
     "@infinitecanvas/extension-text": "workspace:^",
-    "@lastolivegames/becsy": "^0.15.5",
-    "@lit-labs/preact-signals": "^1.0.3",
-    "@preact/signals-core": "^1.10.0",
-    "@tiptap/core": "^3.0.7",
-    "@tiptap/extension-bold": "^3.0.7",
-    "@tiptap/extension-color": "^3.0.7",
-    "@tiptap/extension-document": "^3.0.1",
-    "@tiptap/extension-history": "^3.0.1",
-    "@tiptap/extension-italic": "^3.0.7",
-    "@tiptap/extension-paragraph": "^3.0.1",
-    "@tiptap/extension-text": "^3.0.1",
-    "@tiptap/extension-text-align": "^3.0.7",
-    "@tiptap/extension-text-style": "^3.0.7",
-    "@tiptap/extension-underline": "^3.0.7",
-    "lit": "^3.3.0",
-    "tinycolor2": "^1.6.0",
-    "zod": "^3.25.36"
+    "lit": "^3.3.0"
   },
   "devDependencies": {
-    "@types/tinycolor2": "^1.4.6",
     "vitest": "^3.1.4"
   }
 }
