--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -19,6 +19,7 @@
     "@infinitecanvas/extension-input": "workspace:^",
     "@infinitecanvas/extension-local-storage": "workspace:^",
     "@infinitecanvas/extension-multiplayer": "workspace:^",
+    "@infinitecanvas/extension-perfect-freehand": "workspace:^",
     "@infinitecanvas/extension-rough-shapes": "workspace:^",
     "@infinitecanvas/extension-sticky-notes": "workspace:^",
     "@infinitecanvas/extension-text": "workspace:^",
