--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "path": "packages/extension-multiplayer"
     },
     {
-      "path": "packages/extension-perfect-freehand"
+      "path": "packages/extension-ink"
     },
     {
       "path": "packages/extension-rough-shapes"
