--- a/examples/canvas/tsconfig.json
+++ b/examples/canvas/tsconfig.json
@@ -1,8 +1,4 @@
 {
   "extends": "../../tsconfig.test.json",
-  "include": [
-    "src",
-    "__tests__",
-    "../../packages/extension-sticky-note/src/elements/StickyNote.ts"
-  ]
+  "include": ["src", "__tests__"]
 }
