--- a/packages/extension-controls/package.json
+++ b/packages/extension-controls/package.json
@@ -43,7 +43,8 @@
   "dependencies": {
     "@infinitecanvas/core": "workspace:^",
     "@lastolivegames/becsy": "^0.15.5",
-    "xstate": "^5.19.4"
+    "xstate": "^5.19.4",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "vitest": "^3.1.4"
