--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@infinitecanvas/core": "workspace:^",
+    "@infinitecanvas/extension-arrows": "workspace:^",
     "@infinitecanvas/extension-color": "workspace:^",
     "@infinitecanvas/extension-controls": "workspace:^",
     "@infinitecanvas/extension-eraser": "workspace:^",
