--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -83,12 +83,12 @@
     "test:watch": "vitest  --config ../../vitest.config.ts run --watch"
   },
   "dependencies": {
+    "@dalet-oss/lexorank": "^1.1.0",
     "@floating-ui/dom": "^1.7.2",
     "@lastolivegames/becsy": "^0.15.5",
     "@lit-labs/preact-signals": "^1.0.3",
     "@preact/signals-core": "^1.10.0",
     "idb": "^8.0.3",
-    "lexorank": "^1.0.5",
     "lit": "^3.3.0",
     "mathjs": "^14.6.0",
     "strict-event-emitter": "^0.5.1",
