--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,9 @@
     },
     {
       "path": "examples/canvas"
+    },
+    {
+      "path": "examples/asciiLand"
     }
   ],
   "compilerOptions": {
