--- a/examples/asciiLand/package.json
+++ b/examples/asciiLand/package.json
@@ -16,11 +16,13 @@
     "lit": "^3.3.0",
     "pixi.js": "^8.13.2",
     "tailwindcss": "^4.1.7",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "wgpu-matrix": "^3.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
+    "@webgpu/types": "^0.1.65",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vue-tsc": "^3.0.5"
