--- a/examples/asciiLand/tsconfig.json
+++ b/examples/asciiLand/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../tsconfig.test.json",
-  "include": ["src", "__tests__"]
+  "include": ["src", "__tests__"],
+  "compilerOptions": {
+    "types": ["@webgpu/types"]
+  }
 }
