--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -87,6 +87,7 @@
     "@floating-ui/dom": "^1.7.2",
     "@lastolivegames/becsy": "^0.15.5",
     "@lit-labs/preact-signals": "^1.0.3",
+    "@lit/context": "^1.1.6",
     "@preact/signals-core": "^1.10.0",
     "@tiptap/core": "^3.0.7",
     "@tiptap/extension-bold": "^3.0.7",
