--- a/packages/extension-rough-shapes/package.json
+++ b/packages/extension-rough-shapes/package.json
@@ -44,6 +44,7 @@
     "@infinitecanvas/core": "workspace:^",
     "@lastolivegames/becsy": "^0.15.5",
     "@lit-labs/preact-signals": "^1.0.3",
+    "@lit/context": "^1.1.6",
     "@preact/signals-core": "^1.10.0",
     "lit": "^3.3.0",
     "roughjs": "^4.6.6"
