--- a/packages/extension-sticky-notes/package.json
+++ b/packages/extension-sticky-notes/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@infinitecanvas/core": "workspace:^",
+    "@lit/context": "^1.1.6",
     "lit": "^3.3.0"
   },
   "devDependencies": {
