--- a/biome.jsonc
+++ b/biome.jsonc
@@ -8,8 +8,19 @@
   },
   // Note: UNIX-like glob patterns {a,b,c} aren't supported yet.
   "files": {
-    "ignore": ["./**/node_modules/**", "./public/**", "./build/**", "**/.turbo/**"],
-    "include": ["./app/**/", "./*.ts", "./*.js", "./*.json", "./*.jsonc"]
+    "ignore": [
+      "./**/node_modules/**",
+      "./public/**",
+      "./build/**",
+      "**/.turbo/**"
+    ],
+    "include": [
+      "./packages/**/*.ts",
+      "./packages/**/*.json",
+      "./examples/**/*.ts",
+      "./examples/**/*.json",
+      "./examples/**/*.vue"
+    ]
   },
   "overrides": [
     {
