--- a/examples/asciiLand/tsconfig.json
+++ b/examples/asciiLand/tsconfig.json
@@ -1,7 +1,4 @@
 {
   "extends": "../../tsconfig.test.json",
-  "include": ["src", "__tests__"],
-  "compilerOptions": {
-    "types": ["@webgpu/types"]
-  }
+  "include": ["src", "__tests__"]
 }
