--- a/examples/asciiLand/package.json
+++ b/examples/asciiLand/package.json
@@ -14,8 +14,10 @@
     "@infinitecanvas/extension-controls": "workspace:^",
     "@infinitecanvas/extension-eraser": "workspace:^",
     "@lastolivegames/becsy": "^0.15.5",
+    "@manaflair/text-layout": "^0.11.0",
     "@tailwindcss/vite": "^4.1.7",
     "lit": "^3.3.0",
+    "mono-layout": "^0.14.4",
     "tailwindcss": "^4.1.7",
     "three": "^0.180.0",
     "vue": "^3.5.18",
