--- a/examples/asciiLand/package.json
+++ b/examples/asciiLand/package.json
@@ -14,8 +14,11 @@
     "@infinitecanvas/extension-controls": "workspace:^",
     "@infinitecanvas/extension-eraser": "workspace:^",
     "@lastolivegames/becsy": "^0.15.5",
+    "@lit-labs/preact-signals": "^1.0.3",
+    "@lit/context": "^1.1.6",
     "@manaflair/text-layout": "^0.11.0",
     "@tailwindcss/vite": "^4.1.7",
+    "figlet": "^1.9.3",
     "lit": "^3.3.0",
     "mono-layout": "^0.14.4",
     "tailwindcss": "^4.1.7",
