--- a/examples/asciiLand/package.json
+++ b/examples/asciiLand/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dalet-oss/lexorank": "^1.1.0",
     "@infinitecanvas/core": "workspace:^",
+    "@infinitecanvas/extension-arc-arrows": "workspace:^",
     "@infinitecanvas/extension-controls": "workspace:^",
     "@infinitecanvas/extension-eraser": "workspace:^",
     "@lastolivegames/becsy": "^0.15.5",
