--- a/packages/extension-eraser/package.json
+++ b/packages/extension-eraser/package.json
@@ -48,7 +48,8 @@
     "lit": "^3.3.0",
     "perfect-freehand": "^1.2.2",
     "simplify-js": "^1.2.4",
-    "xstate": "^5.19.4"
+    "xstate": "^5.19.4",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "vitest": "^3.1.4"
