--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -89,17 +89,18 @@
     "@lit-labs/preact-signals": "^1.0.3",
     "@lit/context": "^1.1.6",
     "@preact/signals-core": "^1.10.0",
-    "@tiptap/core": "^3.0.7",
-    "@tiptap/extension-bold": "^3.0.7",
-    "@tiptap/extension-color": "^3.0.7",
-    "@tiptap/extension-document": "^3.0.1",
-    "@tiptap/extension-history": "^3.0.1",
-    "@tiptap/extension-italic": "^3.0.7",
-    "@tiptap/extension-paragraph": "^3.0.1",
-    "@tiptap/extension-text": "^3.0.1",
-    "@tiptap/extension-text-align": "^3.5.2",
-    "@tiptap/extension-text-style": "^3.0.7",
-    "@tiptap/extension-underline": "^3.0.7",
+    "@tiptap/core": "^3.9.0",
+    "@tiptap/extension-bold": "^3.9.0",
+    "@tiptap/extension-color": "^3.9.0",
+    "@tiptap/extension-document": "^3.9.0",
+    "@tiptap/extension-history": "^3.9.0",
+    "@tiptap/extension-italic": "^3.9.0",
+    "@tiptap/extension-list": "^3.9.0",
+    "@tiptap/extension-paragraph": "^3.9.0",
+    "@tiptap/extension-text": "^3.9.0",
+    "@tiptap/extension-text-align": "^3.9.0",
+    "@tiptap/extension-text-style": "^3.9.0",
+    "@tiptap/extension-underline": "^3.9.0",
     "bezier-easing": "^2.1.0",
     "idb": "^8.0.3",
     "lit": "^3.3.0",
