--- a/examples/asciinotes-com/package.json
+++ b/examples/asciinotes-com/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "firebase": "^12.5.0",
+    "idb": "^8.0.3",
     "lit": "^3.3.1",
     "nuxt": "4.2.0",
     "nuxt-emoji-picker": "1.2.1",
