--- a/examples/asciinotes-com/package.json
+++ b/examples/asciinotes-com/package.json
@@ -35,6 +35,7 @@
     "@vueuse/nuxt": "^14.0.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "figlet": "^1.9.4",
     "firebase": "^12.5.0",
     "idb": "^8.0.3",
     "lit": "^3.3.1",
