--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -32,15 +32,17 @@
     "build": "tsup ./src/index.ts --tsconfig ./tsconfig.build.json --config ../../tsup.config.ts",
     "build:watch": "pnpm build --watch",
     "check:exports": "attw --pack .",
-    "test": "vitest  --config ../../vitest.config.ts run",
-    "test:watch": "vitest  --config ../../vitest.config.ts run --watch"
+    "test": "vitest  --config ./vitest.config.ts run",
+    "test:watch": "vitest  --config ./vitest.config.ts run --watch"
   },
   "dependencies": {
-    "@infinitecanvas/ecs": "workspace:*"
+    "@infinitecanvas/ecs": "workspace:*",
+    "xstate": "^5.24.0"
   },
   "devDependencies": {
-    "vitest": "^4.0.7",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "resize-observer-polyfill": "^1.5.1",
+    "vitest": "^4.0.7"
   },
   "type": "module",
   "peerDependencies": {
