--- a/packages/pluginCanvasControls/package.json
+++ b/packages/pluginCanvasControls/package.json
@@ -1,15 +1,14 @@
 {
   "private": true,
-  "name": "@infinitecanvas/template",
+  "name": "@infinitecanvas/plugin-controls",
   "version": "0.1.0",
-  "description": "Framework-agnostic editor library built on ECS",
+  "description": "Canvas controls plugin - pan, zoom, and scroll for infinite canvas",
   "files": [
     "build"
   ],
   "main": "./build/index.js",
   "module": "./build/index.mjs",
   "types": "./build/index.d.ts",
-  "__exports-comment": "// Define output files for Node.js export maps (https://nodejs.org/api/packages.html#exports)",
   "exports": {
     ".": {
       "import": {
@@ -32,15 +31,17 @@
     "build": "tsup ./src/index.ts --tsconfig ./tsconfig.build.json --config ../../tsup.config.ts",
     "build:watch": "pnpm build --watch",
     "check:exports": "attw --pack .",
-    "test": "vitest  --config ../../vitest.config.ts run",
-    "test:watch": "vitest  --config ../../vitest.config.ts run --watch"
+    "test": "vitest  --config ./vitest.config.ts run",
+    "test:watch": "vitest  --config ./vitest.config.ts run --watch"
   },
   "dependencies": {
-    "@infinitecanvas/ecs": "workspace:*"
+    "@infinitecanvas/editor": "workspace:*",
+    "xstate": "^5.24.0"
   },
   "devDependencies": {
-    "vitest": "^4.0.7",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "resize-observer-polyfill": "^1.5.1",
+    "vitest": "^4.0.7"
   },
   "type": "module",
   "peerDependencies": {
