--- a/examples/editor-canvas/package.json
+++ b/examples/editor-canvas/package.json
@@ -10,10 +10,17 @@
   },
   "devDependencies": {
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-wasm": "^3.5.0"
   },
   "dependencies": {
     "@infinitecanvas/editor": "workspace:^",
-    "@infinitecanvas/plugin-controls": "workspace:^"
+    "@infinitecanvas/math": "workspace:^",
+    "@infinitecanvas/plugin-controls": "workspace:^",
+    "idb": "^8.0.3",
+    "loro-adaptors": "^0.5.0",
+    "loro-crdt": "^1.10.3",
+    "loro-websocket": "^0.5.0"
   }
 }
