--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@infinitecanvas/ecs": "workspace:*",
+    "@infinitecanvas/math": "workspace:*",
     "xstate": "^5.24.0"
   },
   "devDependencies": {
