--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "esbuild-plugin-replace": "^1.4.0",
     "husky": "^9.1.7",
     "is-ci": "^4.1.0",
+    "jsdom": "^27.3.0",
     "lint-staged": "^16.2.6",
     "rimraf": "^6.1.0",
     "taze": "^19.9.0",
