--- a/examples/editor-canvas/package.json
+++ b/examples/editor-canvas/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/lodash.throttle": "^4.1.9",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vite-plugin-top-level-await": "^1.6.0",
@@ -19,6 +20,7 @@
     "@infinitecanvas/math": "workspace:^",
     "@infinitecanvas/plugin-controls": "workspace:^",
     "idb": "^8.0.3",
+    "lodash.throttle": "^4.1.1",
     "loro-adaptors": "^0.5.0",
     "loro-crdt": "^1.10.3",
     "loro-websocket": "^0.5.0"
