--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "is-ci": "^4.1.0",
     "jsdom": "^27.3.0",
     "lint-staged": "^16.2.6",
+    "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^6.1.0",
     "taze": "^19.9.0",
     "tsup": "^8.5.0",
