--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -32,8 +32,8 @@
     "build": "tsup ./src/index.ts --tsconfig ./tsconfig.build.json --config ../../tsup.config.ts",
     "build:watch": "pnpm build --watch",
     "check:exports": "attw --pack .",
-    "test": "vitest  --config ./vitest.config.ts run",
-    "test:watch": "vitest  --config ./vitest.config.ts run --watch"
+    "test": "vitest --config ../../vitest.config.ts run",
+    "test:watch": "vitest --config ../../vitest.config.ts --watch"
   },
   "dependencies": {
     "@infinitecanvas/ecs": "workspace:*",
@@ -42,7 +42,6 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "resize-observer-polyfill": "^1.5.1",
     "vitest": "^4.0.7"
   },
   "type": "module",
