--- a/packages/pluginInfiniteCanvas/package.json
+++ b/packages/pluginInfiniteCanvas/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@infinitecanvas/template",
+  "name": "@infinitecanvas/plugin-infinite-canvas",
   "version": "0.1.0",
   "description": "Framework-agnostic editor library built on ECS",
   "files": [
@@ -38,7 +38,8 @@
   "dependencies": {
     "@infinitecanvas/editor": "workspace:^",
     "@infinitecanvas/math": "workspace:^",
-    "fractional-indexing-jittered": "^1.0.0"
+    "fractional-indexing-jittered": "^1.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
