--- a/examples/asciinotes-com-new/package.json
+++ b/examples/asciinotes-com-new/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asciinotes-com",
+  "name": "asciinotes-com-new",
   "version": "0.0.0",
   "type": "module",
   "private": true,
@@ -18,16 +18,16 @@
   },
   "dependencies": {
     "@dalet-oss/lexorank": "^1.1.1",
-    "@infinitecanvas/core": "workspace:^",
-    "@infinitecanvas/editor": "workspace:^",
-    "@infinitecanvas/extension-arrows": "workspace:^",
-    "@infinitecanvas/extension-controls": "workspace:^",
-    "@infinitecanvas/extension-eraser": "workspace:^",
-    "@infinitecanvas/extension-ink": "workspace:^",
-    "@infinitecanvas/math": "workspace:^",
-    "@infinitecanvas/plugin-controls": "workspace:^",
-    "@infinitecanvas/plugin-infinite-canvas": "workspace:^",
-    "@infinitecanvas/store": "workspace:^",
+    "@infinitecanvas/core": "workspace:*",
+    "@infinitecanvas/editor": "workspace:*",
+    "@infinitecanvas/extension-arrows": "workspace:*",
+    "@infinitecanvas/extension-controls": "workspace:*",
+    "@infinitecanvas/extension-eraser": "workspace:*",
+    "@infinitecanvas/extension-ink": "workspace:*",
+    "@infinitecanvas/math": "workspace:*",
+    "@infinitecanvas/plugin-controls": "workspace:*",
+    "@infinitecanvas/plugin-infinite-canvas": "workspace:*",
+    "@infinitecanvas/store": "workspace:*",
     "@invertase/firestore-stripe-payments": "^0.0.8",
     "@nuxt/ui": "^4.1.0",
     "@pinia/nuxt": "^0.11.2",
