--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -35,7 +35,9 @@
   "dependencies": {
     "@infinitecanvas/ecs": "workspace:*",
     "@infinitecanvas/math": "workspace:*",
-    "xstate": "^5.24.0"
+    "fractional-indexing-jittered": "^1.0.0",
+    "xstate": "^5.24.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
