--- a/packages/vue_old/package.json
+++ b/packages/vue_old/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@infinitecanvas/vue",
+  "name": "@infinitecanvas/vue_old",
   "version": "0.1.0",
   "description": "Vue 3 adapter for Infinite Canvas",
   "files": [
