--- a/examples/editor-vue/package.json
+++ b/examples/editor-vue/package.json
@@ -14,6 +14,7 @@
     "@infinitecanvas/plugin-selection": "workspace:^",
     "@infinitecanvas/store": "workspace:^",
     "@infinitecanvas/vue": "workspace:^",
+    "fractional-indexing-jittered": "^1.0.0",
     "vue": "^3.5.24"
   },
   "devDependencies": {
@@ -22,6 +23,8 @@
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
+    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-wasm": "^3.5.0",
     "vue-tsc": "^3.1.4"
   }
 }
