--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -35,7 +35,9 @@
     "@infinitecanvas/editor": "workspace:^",
     "@infinitecanvas/math": "workspace:^",
     "@infinitecanvas/plugin-canvas-controls": "workspace:^",
+    "@infinitecanvas/plugin-eraser": "workspace:^",
     "@infinitecanvas/plugin-selection": "workspace:^",
+    "perfect-freehand": "^1.2.2",
     "vue": "^3.5.26"
   },
   "devDependencies": {
