--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -34,6 +34,7 @@
     "@floating-ui/vue": "^1.1.6",
     "@infinitecanvas/editor": "workspace:^",
     "@infinitecanvas/math": "workspace:^",
+    "@infinitecanvas/plugin-arrows": "workspace:^",
     "@infinitecanvas/plugin-canvas-controls": "workspace:^",
     "@infinitecanvas/plugin-eraser": "workspace:^",
     "@infinitecanvas/plugin-selection": "workspace:^",
