--- a/examples/editor-vue/package.json
+++ b/examples/editor-vue/package.json
@@ -23,6 +23,7 @@
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
+    "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0",
     "vue-tsc": "^3.1.4"
