--- a/packages/plugin-arrows/package.json
+++ b/packages/plugin-arrows/package.json
@@ -35,6 +35,7 @@
     "@infinitecanvas/editor": "workspace:*",
     "@infinitecanvas/math": "workspace:*",
     "@infinitecanvas/plugin-selection": "workspace:*",
+    "fractional-indexing-jittered": "^1.0.0",
     "xstate": "^5.24.0"
   },
   "devDependencies": {
