--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -39,6 +39,16 @@
     "@infinitecanvas/plugin-eraser": "workspace:^",
     "@infinitecanvas/plugin-pen": "workspace:^",
     "@infinitecanvas/plugin-selection": "workspace:^",
+    "@tiptap/extension-bold": "^3.15.3",
+    "@tiptap/extension-document": "^3.15.3",
+    "@tiptap/extension-italic": "^3.15.3",
+    "@tiptap/extension-paragraph": "^3.15.3",
+    "@tiptap/extension-text": "^3.15.3",
+    "@tiptap/extension-text-align": "^3.15.3",
+    "@tiptap/extension-text-style": "^3.15.3",
+    "@tiptap/extension-underline": "^3.15.3",
+    "@tiptap/extensions": "^3.15.3",
+    "@tiptap/vue-3": "^3.15.3",
     "perfect-freehand": "^1.2.2",
     "vue": "^3.5.26"
   },
