--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/lodash-es": "^4.17.12",
+    "fake-indexeddb": "^6.2.5",
     "vitest": "^4.0.7"
   },
   "type": "module",
