--- a/packages/plugin-canvas-controls/package.json
+++ b/packages/plugin-canvas-controls/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "@infinitecanvas/editor": "workspace:*",
     "@infinitecanvas/math": "workspace:*",
-    "xstate": "^5.24.0"
+    "xstate": "^5.24.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
