--- a/examples/editor-vue/package.json
+++ b/examples/editor-vue/package.json
@@ -13,6 +13,7 @@
     "@infinitecanvas/plugin-canvas-controls": "workspace:^",
     "@infinitecanvas/plugin-selection": "workspace:^",
     "@infinitecanvas/store": "workspace:^",
+    "@infinitecanvas/store-yjs": "workspace:^",
     "@infinitecanvas/vue": "workspace:^",
     "fractional-indexing-jittered": "^1.0.0",
     "vue": "^3.5.24"
@@ -26,6 +27,7 @@
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0",
-    "vue-tsc": "^3.1.4"
+    "vue-tsc": "^3.1.4",
+    "@types/bun": "latest"
   }
 }
