--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,12 @@
       "path": "packages/store"
     },
     {
+      "path": "packages/store-automerge"
+    },
+    {
+      "path": "packages/store-yjs"
+    },
+    {
       "path": "packages/vue"
     },
     {
