--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@floating-ui/vue": "^1.1.6",
+    "@infinitecanvas/ecs-sync": "workspace:^",
     "@infinitecanvas/editor": "workspace:^",
     "@infinitecanvas/math": "workspace:^",
     "@infinitecanvas/plugin-arrows": "workspace:^",
