--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
       "path": "packages/plugin-selection"
     },
     {
+      "path": "packages/plugin-shapes"
+    },
+    {
       "path": "packages/extension-arrows"
     },
     {
