--- a/packages/asset-sync/package.json
+++ b/packages/asset-sync/package.json
@@ -27,9 +27,7 @@
     "clean": "rimraf build .turbo",
     "build": "tsup ./src/index.ts --tsconfig ./tsconfig.build.json --config ../../tsup.config.ts",
     "build:watch": "pnpm build --watch",
-    "check:exports": "attw --pack .",
-    "test": "vitest --config ../../vitest.config.ts run",
-    "test:watch": "vitest --config ../../vitest.config.ts run --watch"
+    "check:exports": "attw --pack ."
   },
   "dependencies": {
     "idb": "^8.0.3"
